--- a/colibre/auto_plotter/depletion_relations.yml
+++ b/colibre/auto_plotter/depletion_relations.yml
@@ -1,7 +1,7 @@
 oxygen_abundance_v_neutral_dust_to_gas:
   type: "scatter"
   legend_loc: "lower right"
-  selection_mask: "derived_quantities.is_active_50_kpc"
+  selection_mask: "derived_quantities.is_active_and_resolved_50_kpc"
   x:
     quantity: "derived_quantities.gas_o_abundance_avglog_low_50_kpc"
     units: "dimensionless"
@@ -40,105 +40,25 @@ oxygen_abundance_v_neutral_dust_to_gas:
     - filename: GalaxyMetallicityDusttoGasRatio/RemyRuyer2014_BPL_COMW.hdf5
     - filename: GalaxyMetallicityDusttoGasRatio/RemyRuyer2014_Data_COZ.hdf5
     - filename: GalaxyMetallicityDusttoGasRatio/RemyRuyer2014_BPL_COZ.hdf5
-
-oxygen_abundance_v_neutral_dust_to_gas:
-  type: "scatter"
-  legend_loc: "lower right"
-  selection_mask: "derived_quantities.is_active_30_kpc"
-  x:
-    quantity: "derived_quantities.gas_o_abundance_avglog_low_30_kpc"
-    units: "dimensionless"
-    start: 6.8
-    end: 9.7
-    log: false
-  y:
-    quantity: "derived_quantities.neutral_dust_to_gas_ratio_30_kpc"
-    units: "dimensionless"
-    start: 1e-7
-    end: 0.05
-  median:
-    plot: true
-    log: false
-    adaptive: true
-    number_of_bins: 15
-    start:
-      value: 7
-      units: "dimensionless"
-    end:
-      value: 10
-      units: "dimensionless"
-    lower:
-      value: 0
-      units: "dimensionless"
-    upper:
-      value: 1
-      units: "dimensionless"
-  metadata:
-    title:  Oxygen abundance vs dust-to-gas ratio in Neutral Gas (30 kpc aperture)
-    caption: Dust-to-gas mass ratio as a function of oxygen number density abundance in Neutral gas.
-    section: Dust Depletion Relations
-    show_on_webpage: true
-  observational_data:
-    - filename: GalaxyMetallicityDusttoGasRatio/RemyRuyer2014_Data_COMW.hdf5
-    - filename: GalaxyMetallicityDusttoGasRatio/RemyRuyer2014_BPL_COMW.hdf5
-    - filename: GalaxyMetallicityDusttoGasRatio/RemyRuyer2014_Data_COZ.hdf5
-    - filename: GalaxyMetallicityDusttoGasRatio/RemyRuyer2014_BPL_COZ.hdf5
-
-oxygen_abundance_v_neutral_dust_to_gas:
-  type: "scatter"
-  legend_loc: "lower right"
-  selection_mask: "derived_quantities.is_active_30_kpc"
-  x:
-    quantity: "derived_quantities.gas_o_abundance_avglog_low_30_kpc"
-    units: "dimensionless"
-    start: 6.8
-    end: 9.7
-    log: false
-  y:
-    quantity: "derived_quantities.neutral_dust_to_gas_ratio_30_kpc"
-    units: "dimensionless"
-    start: 1e-7
-    end: 0.05
-  median:
-    plot: true
-    log: false
-    adaptive: true
-    number_of_bins: 15
-    start:
-      value: 7
-      units: "dimensionless"
-    end:
-      value: 10
-      units: "dimensionless"
-    lower:
-      value: 0
-      units: "dimensionless"
-    upper:
-      value: 1
-      units: "dimensionless"
-  metadata:
-    title:  Oxygen abundance vs dust-to-gas ratio in Neutral Gas (30 kpc aperture)
-    caption: Dust-to-gas mass ratio as a function of oxygen number density abundance in Neutral gas.
-    section: Dust Depletion Relations
-    show_on_webpage: true
-  observational_data:
-    - filename: GalaxyMetallicityDusttoGasRatio/RemyRuyer2014_Data_COMW.hdf5
-    - filename: GalaxyMetallicityDusttoGasRatio/RemyRuyer2014_BPL_COMW.hdf5
-    - filename: GalaxyMetallicityDusttoGasRatio/RemyRuyer2014_Data_COZ.hdf5
-    - filename: GalaxyMetallicityDusttoGasRatio/RemyRuyer2014_BPL_COZ.hdf5
+    - filename: GalaxyMetallicityDusttoGasRatio/PerouxHowk2020_OH_z000p250.hdf5
+    - filename: GalaxyMetallicityDusttoGasRatio/PerouxHowk2020_OH_z005p000.hdf5
+    - filename: GalaxyMetallicityDusttoGasRatio/PerouxHowk2020_OH_z003p500.hdf5
+    - filename: GalaxyMetallicityDusttoGasRatio/PerouxHowk2020_OH_z002p500.hdf5
+    - filename: GalaxyMetallicityDusttoGasRatio/PerouxHowk2020_OH_z001p500.hdf5
+    - filename: GalaxyMetallicityDusttoGasRatio/PerouxHowk2020_OH_z000p750.hdf5
 
 oxygen_abundance_v_neutral_dust_to_metal:
   type: "scatter"
   legend_loc: "lower right"
-  selection_mask: "derived_quantities.is_active_30_kpc"
+  selection_mask: "derived_quantities.is_active_and_resolved_50_kpc"
   x:
-    quantity: "derived_quantities.gas_o_abundance_avglog_low_30_kpc"
+    quantity: "derived_quantities.gas_o_abundance_avglog_low_50_kpc"
     units: "dimensionless"
     start: 6.8
     end: 9.7
     log: false
   y:
-    quantity: "derived_quantities.cold_dense_dust_to_metal_ratio_30_kpc"
+    quantity: "derived_quantities.cold_dense_dust_to_metal_ratio_50_kpc"
     units: "dimensionless"
     start: 1e-3
     end: 5
@@ -161,7 +81,7 @@ oxygen_abundance_v_neutral_dust_to_metal:
       value: 1
       units: "dimensionless"
   metadata:
-    title:  Oxygen abundance vs dust-to-metal ratio in Neutral Gas (30 kpc aperture)
+    title:  Oxygen abundance vs dust-to-metal ratio in Neutral Gas (50 kpc aperture)
     caption: Dust-to-metal mass ratio as a function of oxygen number density abundance in Neutral gas.
     section: Dust Depletion Relations
     show_on_webpage: true
@@ -170,3 +90,191 @@ oxygen_abundance_v_neutral_dust_to_metal:
     - filename: GalaxyMetallicityDusttoMetalRatio/Peroux2020_z002p500.hdf5
     - filename: GalaxyMetallicityDusttoMetalRatio/Peroux2020_z003p500.hdf5
     - filename: GalaxyMetallicityDusttoMetalRatio/Peroux2020_z004p650.hdf5
+    - filename: GalaxyMetallicityDusttoMetalRatio/PerouxHowk2020_OH_z000p250.hdf5
+    - filename: GalaxyMetallicityDusttoMetalRatio/PerouxHowk2020_OH_z005p000.hdf5
+    - filename: GalaxyMetallicityDusttoMetalRatio/PerouxHowk2020_OH_z003p500.hdf5
+    - filename: GalaxyMetallicityDusttoMetalRatio/PerouxHowk2020_OH_z002p500.hdf5
+    - filename: GalaxyMetallicityDusttoMetalRatio/PerouxHowk2020_OH_z001p500.hdf5
+    - filename: GalaxyMetallicityDusttoMetalRatio/PerouxHowk2020_OH_z000p750.hdf5
+
+oxygen_abundance_v_neutral_dust_to_gas2:
+  type: "scatter"
+  legend_loc: "lower right"
+  selection_mask: "derived_quantities.is_active_and_resolved_50_kpc"
+  x:
+    quantity: "derived_quantities.gas_o_abundance_avglog_low_50_kpc"
+    units: "dimensionless"
+    start: 6.8
+    end: 9.7
+    log: false
+  y:
+    quantity: "derived_quantities.neutral_dust_to_gas_ratio_50_kpc"
+    units: "dimensionless"
+    start: 1e-7
+    end: 0.05
+  median:
+    plot: true
+    log: false
+    adaptive: true
+    number_of_bins: 15
+    start:
+      value: 7
+      units: "dimensionless"
+    end:
+      value: 10
+      units: "dimensionless"
+    lower:
+      value: 0
+      units: "dimensionless"
+    upper:
+      value: 1
+      units: "dimensionless"
+  metadata:
+    title:  Oxygen abundance vs dust-to-gas ratio in Neutral Gas (50 kpc aperture)
+    caption: Dust-to-gas mass ratio as a function of oxygen number density abundance in Neutral gas.
+    section: Dust Depletion Relations
+    show_on_webpage: true
+  observational_data:
+    - filename: GalaxyMetallicityDusttoGasRatio/PerouxHowk2020_OH_z000p250.hdf5
+    - filename: GalaxyMetallicityDusttoGasRatio/PerouxHowk2020_OH_z005p000.hdf5
+    - filename: GalaxyMetallicityDusttoGasRatio/PerouxHowk2020_OH_z003p500.hdf5
+    - filename: GalaxyMetallicityDusttoGasRatio/PerouxHowk2020_OH_z002p500.hdf5
+    - filename: GalaxyMetallicityDusttoGasRatio/PerouxHowk2020_OH_z001p500.hdf5
+    - filename: GalaxyMetallicityDusttoGasRatio/PerouxHowk2020_OH_z000p750.hdf5
+
+oxygen_abundance_v_neutral_dust_to_metal2:
+  type: "scatter"
+  legend_loc: "lower right"
+  selection_mask: "derived_quantities.is_active_and_resolved_50_kpc"
+  x:
+    quantity: "derived_quantities.gas_o_abundance_avglog_low_50_kpc"
+    units: "dimensionless"
+    start: 6.8
+    end: 9.7
+    log: false
+  y:
+    quantity: "derived_quantities.cold_dense_dust_to_metal_ratio_50_kpc"
+    units: "dimensionless"
+    start: 1e-3
+    end: 5
+    log: true
+  median:
+    plot: true
+    log: false
+    adaptive: true
+    number_of_bins: 15
+    start:
+      value: 7
+      units: "dimensionless"
+    end:
+      value: 10
+      units: "dimensionless"
+    lower:
+      value: 0
+      units: "dimensionless"
+    upper:
+      value: 1
+      units: "dimensionless"
+  metadata:
+    title:  Oxygen abundance vs dust-to-metal ratio in Neutral Gas (50 kpc aperture)
+    caption: Dust-to-metal mass ratio as a function of oxygen number density abundance in Neutral gas.
+    section: Dust Depletion Relations
+    show_on_webpage: true
+  observational_data:
+    - filename: GalaxyMetallicityDusttoMetalRatio/PerouxHowk2020_OH_z000p250.hdf5
+    - filename: GalaxyMetallicityDusttoMetalRatio/PerouxHowk2020_OH_z005p000.hdf5
+    - filename: GalaxyMetallicityDusttoMetalRatio/PerouxHowk2020_OH_z003p500.hdf5
+    - filename: GalaxyMetallicityDusttoMetalRatio/PerouxHowk2020_OH_z002p500.hdf5
+    - filename: GalaxyMetallicityDusttoMetalRatio/PerouxHowk2020_OH_z001p500.hdf5
+    - filename: GalaxyMetallicityDusttoMetalRatio/PerouxHowk2020_OH_z000p750.hdf5
+
+sf_metallicity_v_neutral_dust_to_gas2:
+  type: "scatter"
+  legend_loc: "lower right"
+  selection_mask: "derived_quantities.is_active_and_resolved_50_kpc"
+  x:
+    quantity: "apertures.zmet_gas_sf_50_kpc"
+    units: "dimensionless"
+    start: 1e-4
+    end: 0.5
+    log: true
+  y:
+    quantity: "derived_quantities.neutral_dust_to_gas_ratio_50_kpc"
+    units: "dimensionless"
+    start: 1e-7
+    end: 0.05
+  median:
+    plot: true
+    log: true
+    adaptive: true
+    number_of_bins: 15
+    start:
+      value: 1e-4
+      units: "dimensionless"
+    end:
+      value: 0.5
+      units: "dimensionless"
+    lower:
+      value: 0
+      units: "dimensionless"
+    upper:
+      value: 1
+      units: "dimensionless"
+  metadata:
+    title:  SF metallicity vs dust-to-gas ratio in Neutral Gas (50 kpc aperture)
+    caption: Dust-to-gas mass ratio as a function of oxygen number density abundance in Neutral gas.
+    section: Dust Depletion Relations
+    show_on_webpage: true
+  observational_data:
+    - filename: GalaxyMetallicityDusttoGasRatio/PerouxHowk2020_Z_z000p250.hdf5
+    - filename: GalaxyMetallicityDusttoGasRatio/PerouxHowk2020_Z_z005p000.hdf5
+    - filename: GalaxyMetallicityDusttoGasRatio/PerouxHowk2020_Z_z003p500.hdf5
+    - filename: GalaxyMetallicityDusttoGasRatio/PerouxHowk2020_Z_z002p500.hdf5
+    - filename: GalaxyMetallicityDusttoGasRatio/PerouxHowk2020_Z_z001p500.hdf5
+    - filename: GalaxyMetallicityDusttoGasRatio/PerouxHowk2020_Z_z000p750.hdf5
+
+sf_metallicity_v_neutral_dust_to_metal2:
+  type: "scatter"
+  legend_loc: "lower right"
+  selection_mask: "derived_quantities.is_active_and_resolved_50_kpc"
+  x:
+    quantity: "apertures.zmet_gas_sf_50_kpc"
+    units: "dimensionless"
+    start: 1e-4
+    end: 0.5
+    log: true
+  y:
+    quantity: "derived_quantities.cold_dense_dust_to_metal_ratio_50_kpc"
+    units: "dimensionless"
+    start: 1e-3
+    end: 5
+    log: true
+  median:
+    plot: true
+    log: true
+    adaptive: true
+    number_of_bins: 15
+    start:
+      value: 1e-4
+      units: "dimensionless"
+    end:
+      value: 0.5
+      units: "dimensionless"
+    lower:
+      value: 0
+      units: "dimensionless"
+    upper:
+      value: 1
+      units: "dimensionless"
+  metadata:
+    title:  SF metallicity vs dust-to-metal ratio in Neutral Gas (50 kpc aperture)
+    caption: Dust-to-metal mass ratio as a function of oxygen number density abundance in Neutral gas.
+    section: Dust Depletion Relations
+    show_on_webpage: true
+  observational_data:
+    - filename: GalaxyMetallicityDusttoMetalRatio/PerouxHowk2020_Z_z000p250.hdf5
+    - filename: GalaxyMetallicityDusttoMetalRatio/PerouxHowk2020_Z_z005p000.hdf5
+    - filename: GalaxyMetallicityDusttoMetalRatio/PerouxHowk2020_Z_z003p500.hdf5
+    - filename: GalaxyMetallicityDusttoMetalRatio/PerouxHowk2020_Z_z002p500.hdf5
+    - filename: GalaxyMetallicityDusttoMetalRatio/PerouxHowk2020_Z_z001p500.hdf5
+    - filename: GalaxyMetallicityDusttoMetalRatio/PerouxHowk2020_Z_z000p750.hdf5
